# pokemon-card-recognizer

./: .gitattributes  .gitignore  MANIFEST.in  README.md  conda.yaml  conda.yml  conda_deploy.yaml  conda_linux.yaml  conda_osx.yaml  example_runner.py  makefile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test_python-conda-build.yml
card_recognizer/algo/: ocr.py  text_classify.py
card_recognizer/api/: card_recognizer.py  card_recognizer_pipeline.py  mode.py
card_recognizer/api/test/: test_end_to_end.py
card_recognizer/classifier/: rules.py  text_classify.py  word_classifier.py
card_recognizer/classifier/core/: card_classification_result.py  card_prediction_result.py  rules.py  vocab.py  word_classifier.py
card_recognizer/classifier/eval/: plots.py  sensitivity.py
card_recognizer/classifier/test/: test_card_prediction_result.py  test_word_classifier.py
card_recognizer/eval/: eval.py  predict.py
card_recognizer/infra/: ptcgsdk.py
card_recognizer/infra/algo_ops/: cvops.py  pipeline.py  textops.py
card_recognizer/infra/api/: ffmpeg.py  ptcgsdk.py  spellchecker.py  sys.py
card_recognizer/infra/cvops/: cvops.py
card_recognizer/infra/iter_params/: iter_params.py
card_recognizer/infra/paraloop/: paraloop.py
card_recognizer/infra/ptcgsdk/: ptcgsdk.py
card_recognizer/ocr/: ocr.py  ocr_pipeline.py
card_recognizer/ocr/dependency/: ffmpeg.py
card_recognizer/ocr/experimental/: ocr_fusion.py
card_recognizer/ocr/instances/: cv.py  ocr.py  text.py
card_recognizer/pulls_estimator/: plots.py  pull_stats.py  pulls_estimator.py  pulls_summary.py
card_recognizer/pulls_filter/: plots.py  pull_stats.py  pulls_filter.py  pulls_summary.py
card_recognizer/reference/: card_reference.py  card_text_reference.py  eval_master_on_reference.py  eval_on_reference.py  eval_pipeline_on_reference.py  setup_reference.py  vocab.py
card_recognizer/run_finding/: interval.py  run_finding.py
pokemon_card_recognizer/api/: card_recognizer.py  operating_mode.py
pokemon_card_recognizer/pulls_estimator/: plots.py  pulls_estimator.py  pulls_summary.py
(+872 files in other folders)
