[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pokemon-card-recognizer"
version = "0.0.1.3.8.5"
authors = [
  { name="Prateek Tandon", email="prateek1.tandon@gmail.com" },
]
description = "Pokemon TCG Card Recognizer"
readme = "README.md"
requires-python = ">=3.11.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "ocr-ops",
    "pandas",
    "pokemontcgsdk",
    "bidict",
    "ordered_set",
    "requests",
    "Pillow==9.5.0",
    "tqdm",
]

[tool.hatch.build.targets.wheel.force-include]
"pokemon_card_recognizer/reference/data/ref_build" = "pokemon_card_recognizer/reference/data/ref_build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.gitignore",
]

[project.urls]
"Homepage" = "https://github.com/prateekt/pokemon-card-recognizer"
"Bug Tracker" = "https://github.com/prateekt/pokemon-card-recognizer/issues"